test/files/neg/t2066.check
t2066.scala:6: error: overriding def f[T[_]]: Unit (defined in trait A1);
 override def f[T[+_]]: Unit has incompatible type
  override def f[T[+_]] = ()
               ^
t2066.scala:10: error: overriding def f[T[_]]: Unit (defined in trait A1);
 override def f[T[-_]]: Unit has incompatible type
  override def f[T[-_]] = ()
               ^
t2066.scala:23: error: overriding def f[T[+_]]: Unit (defined in trait A2);
 override def f[T[-_]]: Unit has incompatible type
  override def f[T[-_]] = ()
               ^
t2066.scala:45: error: overriding def f[T[X[+_]]]: Unit (defined in trait A4);
 override def f[T[X[_]]]: Unit has incompatible type
  override def f[T[X[_]]] = ()
               ^
t2066.scala:53: error: overriding def f[T[X[-_]]]: Unit (defined in trait A5);
 override def f[T[X[_]]]: Unit has incompatible type
  override def f[T[X[_]]] = ()
               ^
5 errors found
